# fizz-buzz

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
fizz_buzz/: __main__.py  app_creator.py  custom_logging.py
fizz_buzz/domain/fizzbuzz/use_cases/list/: list_fizz_buzz_request.py  list_fizz_buzz_request_validator.py  list_fizz_buzz_use_case.py
fizz_buzz/domain/fizzbuzz/use_cases/list/services/: list_fizz_buzz_request_validation.py  listing_fizz_buzz_use_case.py  logs_repository.py
fizz_buzz/domain/fizzbuzz/use_cases/stats/: fizz_buzz_stats_response.py  fizz_buzz_stats_use_case.py
fizz_buzz/domain/fizzbuzz/use_cases/stats/services/: fizz_buzz_stats_compute_use_case.py
fizz_buzz/domain/sequence/entities/: sequence.py
fizz_buzz/domain/sequence/exceptions/: base.py
fizz_buzz/domain/sequence/services/: identifier_generation.py
fizz_buzz/domain/sequence/services/store/: logs_store.py
fizz_buzz/domain/sequence/services/use_cases/: creating_sequence_use_case.py  sequence_stats_compute_use_case.py
fizz_buzz/domain/sequence/use_cases/create/: create_sequence_factory.py  create_sequence_request.py  create_sequence_request_validator.py  create_sequence_response.py  create_sequence_use_case.py
fizz_buzz/domain/sequence/use_cases/create/services/: create_sequence_creation.py  create_sequence_request_validation.py
fizz_buzz/domain/sequence/use_cases/list/: list_fizz_buzz_request_validator.py  list_fizz_buzz_response.py  list_fizz_buzz_use_case.py
fizz_buzz/domain/sequence/use_cases/stats/: fizz_buzz_stats_use_case.py  sequence_stats_response.py  sequence_stats_use_case.py
fizz_buzz/domain/value_objects/: identifier.py
fizz_buzz/infrastructure/api/v1/: routes.py  version.py
fizz_buzz/infrastructure/api/v1/fizz_buzz/: fizz_buzz_stats.py  list_fizz_buzz.py
fizz_buzz/infrastructure/api/v1/sequence/: create_sequence.py  sequence_stats.py
fizz_buzz/infrastructure/exceptions/: base.py  constants.py  handlers.py
fizz_buzz/infrastructure/persistence/: identifier_generator.py
fizz_buzz/infrastructure/persistence/logs/: in_memory_logs.py
fizz_buzz/infrastructure/store/logs/: in_memory_logs.py
fizz_buzz/setup/: app_factory.py
fizz_buzz/setup/ioc/: registry.py
fizz_buzz/setup/ioc/dishka_providers/domain/: fizz_buzz_use_case_providers.py
fizz_buzz/setup/ioc/dishka_providers/infrastructure/: identifier_generator_providers.py  logs_providers.py
fizz_buzz/setup/settings/: core.py
tests/support/builders/: sequence_builder.py
tests/support/fixtures/: client.py
(+11 files in other folders)
